[package]
name = "core"
version = "0.1.0"
edition = "2024"
description = "GameKit Core GDExtension - 协程系统与图像生成工具"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
godot = { version = "0.5.3", features = ["experimental-threads"] }
parking_lot = "0.12.5"
smol = "2.0"
async-compat = "0.2.4"
gamealgo = { path = "../vendor/gamealgo" }
gamedialog = { path = "../vendor/gamedialog" }
glam = "0.29"
rand = "0.8"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
mlua = { version = "0.10", features = ["lua51", "send", "vendored"] }
regex-lite = "0.1"
